Refactored port in layer and the achievement domain and type logic to be more modular