@@ -1,74 +1,70 @@
 package team11.platform_backend.game.adapter.out.mapper;
 
 import org.springframework.stereotype.Component;
-import team11.platform_backend.game.adapter.out.jpa.GameAchievementEmbeddable;
 import team11.platform_backend.game.adapter.out.jpa.GameJpaEntity;
+import team11.platform_backend.game.adapter.out.jpa.RuleJpaEntity;
 import team11.platform_backend.game.domain.game.Game;
-import team11.platform_backend.game.domain.game.GameAchievement;
 import team11.platform_backend.game.domain.game.GameId;
 import team11.platform_backend.game.domain.game.Rule;
-import team11.platform_backend.game.domain.Url;
+import team11.platform_backend.sharedkernel.valueobjects.Url;
 
+import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class GameJpaMapper {
-
     public GameJpaEntity toJpaEntity(Game game) {
         GameJpaEntity entity = new GameJpaEntity();
         entity.setGameId(game.getGameId().gameId());
-        entity.setName(game.getName());
-        entity.setDescription(game.getDescription());
-        entity.setPrice(game.getPrice());
-        entity.setPictureUrl(game.getPictureUrl().value());
+        entity.setGameName(game.getGameName());
+        entity.setGameDescription(game.getGameDescription());
+        entity.setGamePrice(game.getGamePrice());
+        entity.setPictureUrls(game.getPictureUrls().stream()
+                .map(Url::value)
+                .collect(Collectors.toList()));
         entity.setGameCreatorName(game.getGameCreatorName());
         entity.setGameUrl(game.getGameUrl().value());
-        entity.setRegistrationState(game.getRegistrationState());
+        entity.setGameState(game.getGameState());
 
-        List<String> ruleDescriptions = game.getRules().stream()
-                .map(Rule::description)
+        // Map Rules (OneToMany relationship)
+        List<RuleJpaEntity> ruleEntities = game.getRules().stream()
+                .map(rule -> new RuleJpaEntity(
+                        entity,
+                        rule.ruleName(),
+                        rule.ruleDescription(),
+                        new HashSet<>(rule.ruleCategories())
+                ))
                 .toList();
-        entity.setRules(ruleDescriptions);
-
-        List<GameAchievementEmbeddable> achievementEmbeddables = game.getAchievements().stream()
-                .map(achievement -> {
-                    GameAchievementEmbeddable achievementEmbeddable = new GameAchievementEmbeddable();
-                    achievementEmbeddable.setCode(achievement.code());
-                    achievementEmbeddable.setDescription(achievement.description());
-                    return achievementEmbeddable;
-                })
-                .toList();
-        entity.setAchievements(achievementEmbeddables);
+        entity.setRules(ruleEntities);
 
         return entity;
     }
 
     public Game toDomain(GameJpaEntity entity) {
-        List<Rule> rules = entity.getRules().stream()
-                .map(Rule::new)
-                .toList();
+        List<Url> pictureUrls = entity.getPictureUrls().stream()
+                .map(Url::new)
+                .collect(Collectors.toList());
 
-        List<GameAchievement> achievements = entity.getAchievements().stream()
-                .map(embeddable -> new GameAchievement(
-                        embeddable.getCode(),
-                        embeddable.getDescription()
+        List<Rule> rules = entity.getRules().stream()
+                .map(ruleEntity -> new Rule(
+                        ruleEntity.getRuleName(),
+                        ruleEntity.getRuleDescription(),
+                        new ArrayList<>(ruleEntity.getRuleCategories())
                 ))
                 .toList();
 
-        Game game = new Game(
+        return new Game(
                 new GameId(entity.getGameId()),
-                entity.getName(),
-                entity.getDescription(),
-                entity.getPrice(),
-                new Url(entity.getPictureUrl()),
+                entity.getGameName(),
+                entity.getGameDescription(),
+                entity.getGamePrice(),
+                pictureUrls,
                 entity.getGameCreatorName(),
                 new Url(entity.getGameUrl()),
-                entity.getRegistrationState()
+                entity.getGameState(),
+                rules
         );
-
-        rules.forEach(rule -> game.getRules().add(rule));
-        achievements.forEach(achievement -> game.getAchievements().add(achievement));
-
-        return game;
     }
 }
